      (Marius Kruger, #301969)

    * ``Transport.readv()`` defaults to not reading more than 100MB in a
      single array. Further ``RemoteTransport.readv`` sets this to 5MB to
      work better with how it splits its requests.
      (John Arbash Meinel, #303538)

    * ``pull -v`` now respects the log_format configuration variable.
      (Aaron Bentley)

  DOCUMENTATION:

  API CHANGES:

    * The logic in commit now delegates inventory basis calculations to
      the ``CommitBuilder`` object; this requires that the commit builder
      in use has been updated to support the new ``recording_deletes`` and
      ``record_delete`` methods. (Robert Collins)

  TESTING:

  INTERNALS:

    * ``KnitVersionedFiles.get_record_stream()`` will now chose a
      more optimal ordering when the keys are requested 'unordered'.
      Previously the order was fully random, now the records should be
      returned from each pack in turn, in forward I/O order.
      (John Arbash Meinel)

    * New method ``bzrlib.repository.Repository.add_inventory_by_delta``
      allows adding an inventory via an inventory delta, which can be
      more efficient for some repository types. (Robert Collins)

    * Repository ``CommitBuilder`` objects can now accumulate an inventory
      delta. To enable this functionality call ``builder.recording_deletes``
      and additionally call ``builder.record_delete`` when a delete
      against the basis occurs. (Robert Collins)

    * The default http handler has been changed from pycurl to urllib.
      The default is still pycurl for https connections. (The only
      advantage of pycurl is that it checks ssl certificates.)
      (John Arbash Meinel)


bzr 1.10 2008-12-05
-------------------

Bazaar 1.10 has several performance improvements for copying revisions
(especially for small updates to large projects).  There has also been a
significant amount of effort in polishing stacked branches.  The commands